--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "license": "ISC",
   "dependencies": {
     "gh-pages": "^6.3.0",
-    "modern-normalize": "^1.1.0"
+    "modern-normalize": "^1.1.0",
+    "notiflix": "^3.2.8"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
